calculator page content spacing fix

--- a/src/app/(calculators)/calculators/Page.module.scss
+++ b/src/app/(calculators)/calculators/Page.module.scss
@@ -61,6 +61,14 @@
     margin-bottom: clamp(20px, 5vw, 30px);
     line-height: 1.1;
   }
+  h3,
+  h4 {
+    font-size: clamp(30px, 8vw, 35px);
+    margin-top: clamp(40px, 10vw, 60px);
+  }
+  h2:not(:first-child) {
+    margin-top: clamp(40px, 10vw, 60px);
+  }
   > hr {
     display: none;
   }
